--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Skye Fenton
-logo: "Image 2-11-21 at 2.00 PM.jpg"
+logo: "/portfolio/Image 2-11-21 at 2.00 PM.jpg"
